--- a/rpm/harbour-elephant-seal.yaml
+++ b/rpm/harbour-elephant-seal.yaml
@@ -2,41 +2,31 @@ Name: harbour-elephant-seal
 Summary: Mastodon client
 Version: 0.1
 Release: 1
-# The contents of the Group field should be one of the groups listed here:
-# https://github.com/mer-tools/spectacle/blob/master/data/GROUPS
-Group: Qt/Qt
+Group: Applications/Internet
 URL: http://example.org/
 License: GPLv3
-# This must be generated before uploading a package to a remote build service.
-# Usually this line does not need to be modified.
 Sources:
 - '%{name}-%{version}.tar.bz2'
 Description: |
   A simple Mastodon client
 Builder: cmake
 
-# This section specifies build dependencies that are resolved using pkgconfig.
-# This is the preferred way of specifying build dependencies for your package.
+
 PkgConfigBR:
   - sailfishapp >= 1.0.2
   - Qt5Core
   - Qt5Qml
   - Qt5Quick
 
-# Build dependencies without a pkgconfig setup can be listed here
-# PkgBR:
-#   - package-needed-to-build
+PkgBR:
+  - rust
+  - rust-std-static
 
-# Runtime dependencies which are not automatically detected
 Requires:
   - sailfishsilica-qt5 >= 0.10.9 
 
-# All installed files
 Files:
   - '%{_bindir}'
   - '%{_datadir}/%{name}'
   - '%{_datadir}/applications/%{name}.desktop'
   - '%{_datadir}/icons/hicolor/*/apps/%{name}.png'
-
-# For more information about yaml and what's supported in Sailfish OS
-# build system, please see https://wiki.merproject.org/wiki/Spectacle
