--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Github CI build
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -8,7 +11,7 @@ env:
   SFOS_RELEASE: 4.5.0.16
 
 jobs:
-  build-sfos:
+  build-sfos-armv7hl:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +22,14 @@ jobs:
     - name: Build armv7hl
       run:  |
         .github/workflows/build-sfos-package.sh armv7hl
+
+  build-sfos-extra:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
     - name: Build aarch64
       run:  |
