Cross-builds the Rust lib
Made sure that the Rust lib can be built
with i486, arm and aarch.

--- a/lib/rust/Cargo.toml
+++ b/lib/rust/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "elephant-seal"
+name = "elephant-seal-rs"
 version = "0.1.0"
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 
