--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 env:
-  RELEASE: 4.5.0.16
+  SFOS_RELEASE: 4.5.0.16
 
 jobs:
   build-sfos:
@@ -16,11 +16,18 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Build
-      uses: coderus/github-sfos-build@master
-      with:
-        release: ${{ env.RELEASE }}
-        arch: i486
+    - name: Build armv7hl
+      run:  |
+        .github/workflows/build-sfos-package.sh armv7hl
+
+    - name: Build aarch64
+      run:  |
+        .github/workflows/build-sfos-package.sh aarch64
+
+    - name: Build i486
+      run:  |
+        .github/workflows/build-sfos-package.sh i486
+
 
   build-dev:
     runs-on: ubuntu-latest
