--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,30 +16,18 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Prepare
-      run: mkdir output
-      
     - name: Build armv7hl
-      id: build_armv7hl
-      uses: coderus/github-sfos-build@master
-      with:
-        release: ${{ env.RELEASE }}
-        arch: armv7hl
+      run:  |
+        .github/workflows/build-sfos-package.sh armv7hl
 
     - name: Build aarch64
-      id: build_aarch64
-      uses: coderus/github-sfos-build@master
-      with:
-        release: ${{ env.RELEASE }}
-        arch: aarch64
+      run:  |
+        .github/workflows/build-sfos-package.sh aarch64
 
     - name: Build i486
-      id: build_i486
-      uses: coderus/github-sfos-build@master
-      with:
-        release: ${{ env.RELEASE }}
-        arch: i486
-      
+      run:  |
+        .github/workflows/build-sfos-package.sh i486
+
     - name: Upload build result
       uses: actions/upload-artifact@v2
       with:
