--- a/lib/rust/CMakeLists.txt
+++ b/lib/rust/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(elephant-seal-rs-cxx CXX)
 cmake_minimum_required(VERSION 3.5)
 
-corrosion_import_crate(MANIFEST_PATH rust/Cargo.toml)
+corrosion_import_crate(MANIFEST_PATH Cargo.toml CRATES elephant-seal-rs FLAGS -vv)
 
 find_package (Qt5 COMPONENTS Core)
 
@@ -12,6 +12,6 @@ add_library(${PROJECT_NAME} STATIC
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC .)
-target_link_libraries(${PROJECT_NAME} elephant-seal-lib)
+target_link_libraries(${PROJECT_NAME} elephant-seal-lib elephant-seal-rs)
 
 
