Sailjail and opened auth page from Qt
This commit introduced Sailjail in the
.desktop file.

It also removed the use of Rust `open` to
open login URL, as it doesn't work with sandboxing.
Instead, we use Qt's capabilities.

--- a/bin/harbour-elephant-seal.desktop
+++ b/bin/harbour-elephant-seal.desktop
@@ -4,3 +4,8 @@ X-Nemo-Application-Type=silica-qt5
 Icon=harbour-elephant-seal
 Exec=harbour-elephant-seal
 Name=Elephant seal
+
+[X-Sailjail]
+Permissions=Internet;Camera;Pictures
+OrganizationName=com.github.SfietKonstantin
+ApplicationName=harbour-elephant-seal
