--- a/lib/lib/CMakeLists.txt
+++ b/lib/lib/CMakeLists.txt
@@ -1,11 +1,13 @@
 project(elephant-seal-lib CXX)
 cmake_minimum_required(VERSION 3.5)
 
-find_package (Qt5 COMPONENTS Core)
+find_package (Qt5 COMPONENTS Core Gui)
 
 set(CMAKE_AUTOMOC ON)
 
 add_library(${PROJECT_NAME} STATIC
+    lib/errors.h
+    lib/errors.cpp
     lib/eventbus.h
     lib/eventbus.cpp
     lib/mastodon.h
@@ -14,7 +16,9 @@ add_library(${PROJECT_NAME} STATIC
     lib/mastodonhook.cpp
     lib/mastodonlogin.h
     lib/mastodonlogin.cpp
+    lib/task.h
+    lib/task.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC .)
-target_link_libraries(${PROJECT_NAME} Qt5::Core)
+target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Gui)
