--- a/lib/rust/Cargo.toml
+++ b/lib/rust/Cargo.toml
@@ -1,35 +1,2 @@
-[package]
-name = "elephant-seal-rs"
-version = "0.1.0"
-edition = "2018"
-build = "build.rs"
-
-[dependencies]
-anyhow = "1.0"
-crabodon = { git = "https://github.com/SfietKonstantin/crabodon", branch = "rest" }
-cxx = "1.0"
-cxx-qt-lib = { git = "https://github.com/SfietKonstantin/cxx-qt", branch = "sfos" }
-env_logger = "0.9"
-log = "0.4"
-pretend = "0.4.0"
-pretend-reqwest = "0.4.0"
-tokio = { version = "1", features = ["rt-multi-thread"] }
-
-# Pinned dependencies for Rust 1.52.1
-bumpalo = "=3.8.0"
-hermit-abi = "=0.1.19"
-indexmap = "=1.8.2"
-once_cell = "=1.14.0"
-reqwest = "=0.11.13"
-security-framework = "=2.6.1"
-
-[build-dependencies]
-copy_dir = "0.1"
-cxx-build = "1.0"
-cxx-qt-lib-headers = { git = "https://github.com/SfietKonstantin/cxx-qt", branch = "sfos" }
-
-# Pinned dependencies for Rust 1.52.1
-proc-macro2 = "=1.0.43"
-
-[lib]
-crate-type=["staticlib"]
+[workspace]
+members = ["elephant-seal-ffi", "elephant-seal-rs"]
